--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 
-  "homepage": "http://sbakash.github.io/index",
+  "homepage": "http://sbakash.github.io/akashportfolio",
 
-  "name": "index",
+  "name": "akashportfolio",
 
   "version": "0.1.0",
 
