--- a/.github/workflow/deploy.yml
+++ b/.github/workflow/deploy.yml
@@ -29,4 +29,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./build
-          publish_branch: gh-pages  # Specifies the deployment branch
+          publish_branch: git-publish  # Specifies the deployment branch
