--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "start": "react-scripts start",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d build -b git-publish",  // Updated to deploy to git-publish branch
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
