--- a/.github/workflow/deploy.yml
+++ b/.github/workflow/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy GitHub Pages
 on:
   push:
     branches:
-      - main  # Triggers deployment on push to main
+      - git-publish  # Triggers deployment on push to git-publish
 
 jobs:
   build-and-deploy:
